--- a/WebApplication2/Web.config
+++ b/WebApplication2/Web.config
@@ -15,7 +15,11 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApplication2-20151122073611.mdf;Initial Catalog=aspnet-WebApplication2-20151122073611;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
-    <authentication mode="None"/>
+    <authentication mode="Forms">
+    </authentication>
+    <authorization>
+      <deny users="?"/>
+    </authorization>
     <compilation debug="true" targetFramework="4.5.2">
       <assemblies>
         <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
